# AI-chatbot

./: .dockerignore  .gitignore  Dockerfile  amvera.py  amvera.yml  app.py  build_structured_from_docx.py  config.py  embedding_loader.py  gunicorn.config.py  ingest_and_search_qdrant_ru.py  local_index.py  price_dialog.py  pyproject.toml  rag.py  requirements.txt  services.py  session_manager.py  structured_contacts.json  structured_faq.json  structured_rooms.json
Qdrant DB/: build_structured_from_docx.py  ingest_and_search_qdrant_ru.py
Qdrant JSON/: structured_concept.json  structured_contacts.json  structured_faq.json  structured_hotel.json  structured_loyalty.json  structured_rooms.json
chatbot/: __init__.py  amvera.py  cli.py  config.py  embedding_loader.py  local_index.py  price_dialog.py  rag.py  services.py  web.py
deploy/render/: .env.render.example  README.md  render.yaml
docx/: Категории номеров и их описание.docx  Концепция номеров и проживания.docx  Наши контакты.docx  Описание отеля и доступных услуг.docx  Программа лояльности.docx  Частые вопросы.docx
knowledge_base/: structured_contacts.json  structured_hotel.json  structured_rooms.json
tools/: preload_model.py
