[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chatbot"
version = "0.1.0"
description = "RAG-помощник для Amvera"
requires-python = ">=3.11"
authors = [
    { name = "Amvera" }
]
license = { text = "Proprietary" }

[tool.setuptools]
py-modules = [
    "amvera",
    "app",
    "config",
    "embedding_loader",
    "price_dialog",
    "rag",
    "services"
]
